--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gsap": "^3.12.5",
     "next": "15.0.3",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
