--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.0.3",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
