--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
-    "next": "15.0.3",
+    "next": "^16.0.7",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
